# Federated-Directly-Follows-Graph-Discovery

./: Cargo.toml  README.md
Federated-Discovery/: Cargo.toml
Federated-Discovery/data/org_A_split_by_random/: SepsisCases-EventLog.xes
Federated-Discovery/data/org_B_split_by_random/: SepsisCases-EventLog.xes
Federated-Discovery/src/: lib.rs  main.rs
Federated-Discovery/src/federated/: organization_communication.rs  organization_struct.rs  utils.rs
output/: BPIChallenge2017-Offerlog.dfg  BPI_Challenge_2012.dfg  BPI_Challenge_2013_closed_problems.dfg  BPI_Challenge_2013_incidents.dfg  BPI_Challenge_2013_open_problems.dfg  BPI_Challenge_2018.dfg  BPI_Challenge_2019.dfg  Hospital_log.dfg  Road_Traffic_Fine_Management_Process.dfg  SepsisCases-EventLog.dfg
src/: main.rs
src/federated/: organization_communication.rs  organization_struct.rs
